--- a/Visual Studio Solution/AcleUrbanGardens.Web/Views/Category/Edit.cshtml
+++ b/Visual Studio Solution/AcleUrbanGardens.Web/Views/Category/Edit.cshtml
@@ -1,51 +1,119 @@
 ﻿@using AcleUrbanGardens.Web.Models;
+@using AcleUrbanGardens.Web.Helpers;
 @model EditCategoryViewModel
 
 @{
     ViewBag.Title = Model.Name;
 }
 
-<h2>Edit @Model.Name</h2>
+<div class="container" id="Edit">
+    <div class="row">
+        <div class="col-lg-2 col-md-2 col-sm-2">
+            <div id="categoryTreeView" class="jumbotron container-fluid" style="box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);">
+                <p>Category tree view</p>
+                @RenderCategoryTreeView()
+            </div>
+        </div>
+        <div class="col-lg-10 col-md-10 col-sm-10">
+            <div class="container">
+                <br />
+                <div id="categorydetail" class="jumbotron container-fluid" style="box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);">
+                    <h2>Edit @Model.Name</h2>
+                    @RenderCategoryDetail()
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
-@{  if (!string.Equals(Model.Name, Constants.CATEGORY_UNASSIGNED_PRODUCTS))
+@helper RenderCategoryTreeView()
+{ 
+   <p>TODO: create the tree view!</p>
+}
+
+@helper RenderCategoryDetail()
+{
+    if (!string.Equals(Model.Name, Constants.CATEGORY_UNASSIGNED_PRODUCTS))
     {
         using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
 
-            <div class="form-horizontal">
-                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                @Html.HiddenFor(model => model.Id)
+            <div class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <!--hidden fields no need for formatting-->
+                    @Html.DisplayFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.CreatedBy, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.CreateDate, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.UpdatedBy, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.EditorFor(model => model.UpdateDate, new { htmlAttributes = new { @class = "form-control" } })
+                    <div class="form-horizontal">
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.ImagePath, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.ImagePath, new { htmlAttributes = new { @class = "form-control", disabled = "disabled" } })
+                                @Html.ValidationMessageFor(model => model.ImagePath, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            @Html.LabelFor(model => model.IsDeleted, htmlAttributes: new { @class = "control-label col-md-2" })
+                            <div class="col-md-10">
+                                @Html.EditorFor(model => model.IsDeleted, new { htmlAttributes = new { @class = "form-control" } })
+                                @Html.ValidationMessageFor(model => model.IsDeleted, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
                     </div>
                 </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="form-horizontal">
+                        <div class="form-group">
+                            <div class="col-md-10" style="padding:5px; border: 1px solid gray; border-radius: 5px; text-align: right">
+                                @Html.ActionImage("UpdateImage", "Image", new { Id = Model.Id, Name = Model.Name, ImagePath = Model.ImagePath, Cont = "Category" }, "~/Content/Images/" + Model.ImagePath, Model.ImagePath, "100%", "100%")
+                                <br />
+                                @Html.ActionLink("Update Image", "UpdateImage", "Image", new { Id = Model.Id, Name = Model.Name, ImagePath = Model.ImagePath, Cont = "Category" }, new { @class = "btn btn-primary", title = "Update the current Image" })
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
-
-            <!--hidden fields no need for formatting-->
-            @Html.DisplayFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.EditorFor(model => model.CreatedBy, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.EditorFor(model => model.CreateDate, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.EditorFor(model => model.UpdatedBy, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.EditorFor(model => model.UpdateDate, new { htmlAttributes = new { @class = "form-control" } })
+            <dvi class="row">
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <div>
+                                @Html.ActionLink("Back to Categories", "Index", "Category", new { Id = Model.Id }, new { @class = "btn btn-primary", title = "Back to Categories" })
+                                @Html.ActionLink("Back to Detail", "Details", "Category", new { Id = Model.Id }, new { @class = "btn btn-primary", title = "Back to Category Details" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6 col-md-6 col-sm-6">
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10" style="text-align: right">
+                            <input type="submit" value="Save" class="btn btn-primary" />
+                        </div>
+                    </div>
+                </div>
+            </dvi>
         }
     }
     else
@@ -72,14 +140,4 @@
             </dl>
         </div>
     }
-}
-
-
-
-<div>
-    @Html.ActionLink("Back to Detail", "Details", new { Id = Model.Id })
-</div>
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
 }
