--- a/Visual Studio Solution/AcleUrbanGardens.Web/Views/Category/Edit.cshtml
+++ b/Visual Studio Solution/AcleUrbanGardens.Web/Views/Category/Edit.cshtml
@@ -42,7 +42,7 @@
                     @Html.AntiForgeryToken()
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     @Html.HiddenFor(model => model.Id)
-                    <!--hidden fields no need for formatting-->
+                    <!--hidden fields (Model) no need for formatting-->
                     @Html.DisplayFor(model => model.Id, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.EditorFor(model => model.CreatedBy, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.EditorFor(model => model.CreateDate, new { htmlAttributes = new { @class = "form-control" } })
@@ -93,7 +93,8 @@
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="form-horizontal">
                     <div class="form-group">
-                        <div class="col-md-12" style="border: 1px solid gray; border-radius: 5px; max-width:500px;">
+                        <div class="col-md-12" style="border: 1px solid gray; border-radius: 5px; max-width: 400px;">
+                            @* if the image is updated *@
                             @{  if (Model.ImageIsUpdated)
                                 {
                                     <img src="~/Content/Images/temp/@Model.ImagePath" style="max-width: 100%; height: auto; width: auto\9;"/>
@@ -111,10 +112,8 @@
                             @using (Html.BeginForm("UpdateImage", "Category", FormMethod.Post, new { enctype = "multipart/form-data" }))
                             {
                                 @Html.HiddenFor(model => model.Id)
-                                <label for="file">Upload Image:</label>
                                 <input type="file" name="file" id="file" class="btn-group"/><br>
                                 <input type="submit" value="Upload Image" class="btn btn-primary btn-sm"/>
-                                @*@Ajax.ActionLink("Update Image", "UpdateImage", "Category", new { id = Model.Id }, new AjaxOptions { HttpMethod = "POST" }, new { @class = "btn btn-primary", title = "Upload Image" })*@
                                 <br><br>
                                 @ViewBag.Message
                             }
